# upnp-daemon

./: CHANGES.md  Cargo.toml  README.md  VERSION  bump  sync_readme_with_doc.bash
.github/: env  targets.json
.github/workflows/: release.yml  release_existing_tags.yml  test.yml
crates/easy-upnp/: CHANGES.md  Cargo.toml  README.md  VERSION
crates/easy-upnp/src/: lib.rs
easy-upnp/: Cargo.toml
easy-upnp/src/: lib.rs
src/: cli.rs  lib.rs  main.rs
tests/: cli.rs  common.rs
