[package]
name = "upnp-daemon"
version = "0.4.1-RC"
authors = ["Florian Gamböck <mail@floga.de>"]
edition = "2021"

description = "A daemon for continuously opening ports via UPnP."
repository = "https://github.com/FloGa/upnp-daemon"
readme = "README.md"
categories = ["network-programming"]
license = "WTFPL"
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
anyhow = "1.0.70"
cidr-utils = { version = "0.5.10", features = ["serde"] }
clap = { version = "4.2.4", features = ["derive"] }
csv = "1.1"
ctrlc = { version = "3.0", features = ["termination"] }
env_logger = "0.10.0"
get_if_addrs = "0.5.3"
igd = "0.12.0"
log = "0.4.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.96"
tempfile = "3.5.0"

[target.'cfg(unix)'.dependencies]
daemonize = "0.5.0"
