[package]
name = "upnp-daemon"
version = "0.7.0"
description = "A daemon for continuously opening ports via UPnP."
readme = "README.md"
categories = ["command-line-utilities", "network-programming"]

authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
include.workspace = true

[dependencies]
easy-upnp.workspace = true

anyhow.workspace = true
clap.workspace = true
csv.workspace = true
ctrlc.workspace = true
env_logger.workspace = true
log.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[target.'cfg(unix)'.dependencies]
daemonize.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
lazy_static.workspace = true
predicates.workspace = true

# --- Workspace configuration ---

[workspace.package]
authors = ["Florian Gamböck <mail@floga.de>"]
edition = "2021"
repository = "https://github.com/FloGa/upnp-daemon"
license = "WTFPL"

include = ["src/**/*", "LICENSE", "README.md"]

[workspace.dependencies]

# Internal dependencies

easy-upnp = { version = "0.3.0", path = "crates/easy-upnp" }

# Runtime dependencies

anyhow = "1.0.70"
cidr-utils = { version = "0.5.10", features = ["serde"] }
clap = { version = "4.2.4", features = ["derive"] }
csv = "1.1"
ctrlc = { version = "3.0", features = ["termination"] }
daemonize = "0.5.0"
env_logger = "0.11.3"
if-addrs = "0.14.0"
igd-next = "0.16.2"
log = "0.4.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.96"
tempfile = "3.5.0"
thiserror = "2.0.16"

# Development / test dependencies

assert_cmd = "2.0.11"
lazy_static = "1.4.0"
predicates = "3.0.1"  # sync with assert_cmd
