[package]
name = "easy-upnp"
version = "0.2.1"
description = "Easily open and close UPnP ports."
readme = "README.md"
categories = ["network-programming"]

authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
include.workspace = true

[dependencies]
cidr-utils.workspace = true
get_if_addrs.workspace = true
igd.workspace = true
log.workspace = true
serde.workspace = true
thiserror.workspace = true
