[package]
name = "easy-upnp"
version = "0.3.1"
description = "Easily open and close UPnP ports."
readme = "README.md"
categories = ["network-programming"]

authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
include.workspace = true

[dependencies]
cidr.workspace = true
if-addrs.workspace = true
igd-next.workspace = true
log.workspace = true
serde.workspace = true
thiserror.workspace = true
